--- a/stuff/GameScreen.fxml
+++ b/stuff/GameScreen.fxml
@@ -1,202 +1,176 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.Pane?>
 
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chess.game.GameController">
    <children>
-      <GridPane alignment="CENTER" layoutX="390.0" layoutY="80.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="75.0" minWidth="75.0" prefWidth="75.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="75.0" minWidth="75.0" prefWidth="75.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="75.0" minWidth="75.0" prefWidth="75.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="75.0" minWidth="75.0" prefWidth="75.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="75.0" minWidth="75.0" prefWidth="75.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="75.0" minWidth="75.0" prefWidth="75.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="75.0" minWidth="75.0" prefWidth="75.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="75.0" minWidth="75.0" prefWidth="75.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="75.0" minHeight="75.0" prefHeight="75.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="75.0" minHeight="75.0" prefHeight="75.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="75.0" minHeight="75.0" prefHeight="75.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="75.0" minHeight="75.0" prefHeight="75.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="75.0" minHeight="75.0" prefHeight="75.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="75.0" minHeight="75.0" prefHeight="75.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="75.0" minHeight="75.0" prefHeight="75.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="75.0" minHeight="75.0" prefHeight="75.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <cursor>
-            <Cursor fx:constant="OPEN_HAND" />
-         </cursor>
+      <Pane layoutX="400.0" layoutY="75.0" prefHeight="600.0" prefWidth="600.0">
          <children>
             <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/Black_rook.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/Black_knight.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/Black_bishop.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/Black_queen.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/Black_king.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/Black_bishop.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/Black_knight.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/Black_rook.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/black_pawn.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/black_pawn.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/black_pawn.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="1">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/black_pawn.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="1">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/black_pawn.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.rowIndex="1">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/black_pawn.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.rowIndex="1">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/black_pawn.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.rowIndex="1">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/black_pawn.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="6">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/White_pawn.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="6">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/White_pawn.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="6">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/White_pawn.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="6">
+            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/White_pawn.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="6">
+            <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="90.0" layoutY="53.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/White_pawn.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.rowIndex="6">
+            <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="263.0" layoutY="154.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/White_pawn.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.rowIndex="6">
+            <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="213.0" layoutY="432.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/White_pawn.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.rowIndex="6">
+            <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="331.0" layoutY="351.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/White_pawn.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="7">
+            <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="368.0" layoutY="77.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/White_rook.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="7">
+            <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="100.0" layoutY="343.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/White_knight.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="7">
+            <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="46.0" layoutY="113.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/White_bishop.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="7">
+            <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="204.0" layoutY="308.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/White_king.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="7">
+            <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="184.0" layoutY="51.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/White_queen.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.rowIndex="7">
+            <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="356.0" layoutY="182.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/White_bishop.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.rowIndex="7">
+            <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="58.0" layoutY="191.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/White_knight.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.rowIndex="7">
+            <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="148.0" layoutY="160.0" onDragDetected="#dragPiece" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../graphics/White_rook.png" />
                </image>
             </ImageView>
          </children>
-      </GridPane>
+      </Pane>
    </children>
 </AnchorPane>
